--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.11.2",
     "gulp-minify-html": "^1.0.4",
     "gulp-uglify": "^1.2.0",
+    "gulp-useref": "^1.3.0",
     "gulp-zip": "^3.0.2"
   }
 }
